--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
     "ci:publish": "zx scripts/publish.mjs"
   },
   "dependencies": {
+    "@iconify-json/ic": "^1.1.2",
     "@slidev/types": "^0.28.10",
     "@vueuse/core": "^8.1.2",
     "axios": "^0.21.1",
     "blueimp-md5": "^2.18.0",
     "codemirror-theme-vars": "^0.1.1",
     "prism-theme-vars": "^0.2.2",
-    "theme-vitesse": "^0.1.14"
+    "theme-vitesse": "^0.1.14",
+    "vue": "^3.2.10"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.0",
     "@antfu/ni": "^0.9.3",
     "@antfu/utils": "^0.3.0",
-    "@iconify-json/ic": "^1.1.2",
     "@slidev/cli": "^0.28.10",
     "@slidev/client": "^0.28.10",
     "@types/blueimp-md5": "^2.18.0",
@@ -54,7 +55,6 @@
     "taze": "^0.4.5",
     "typescript": "^4.6.2",
     "vite": "^2.8.6",
-    "vue": "^3.2.10",
     "zx": "^4.2.0"
   },
   "engines": {
