--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slidev-theme-viplay",
-  "version": "0.0.4-beta.8",
+  "version": "0.0.4-beta.7",
   "private": false,
   "description": "Some components for slidev",
   "bugs": "https://github.com/LarchLiu/slidev-theme-viplay/issues",
@@ -24,12 +24,14 @@
   },
   "peerDependencies": {
     "kalidokit": "^1.1.5",
-    "pixi-live2d-display": "^0.3.1"
+    "pixi-live2d-display": "^0.3.1",
+    "pixi.js": "^6.2.2"
   },
   "dependencies": {
     "codemirror-theme-vars": "^0.1.1",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.3.1",
+    "pixi.js": "^6.2.2",
     "prism-theme-vars": "^0.2.2",
     "theme-vitesse": "^0.1.14"
   },
