--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "ci:publish": "zx scripts/publish.mjs"
   },
   "peerDependencies": {
+    "@slidev/client": "^0.29.0",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.3.1",
-    "pixi.js": "^6.2.2"
+    "pixi.js": "^6.2.2",
+    "vue": "^3.2.10"
   },
   "dependencies": {
     "codemirror-theme-vars": "^0.1.1",
