--- a/package.json
+++ b/package.json
@@ -23,40 +23,38 @@
     "ci:publish": "zx scripts/publish.mjs"
   },
   "peerDependencies": {
-    "@slidev/client": "^0.29.0",
+    "@slidev/client": "^51.6.0",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.3.1",
     "pixi.js": "^6.2.2",
-    "vue": "^3.2.10"
+    "vue": "^3.5.13"
   },
   "dependencies": {
-    "codemirror-theme-vars": "^0.1.1",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.3.1",
-    "pixi.js": "^6.2.2",
-    "prism-theme-vars": "^0.2.2",
-    "theme-vitesse": "^0.1.14"
+    "pixi.js": "^6.2.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.0",
     "@antfu/ni": "^0.9.3",
     "@antfu/utils": "^0.3.0",
     "@iconify-json/ic": "^1.1.2",
-    "@slidev/cli": "^0.29.0",
+    "@slidev/cli": "^51.6.0",
     "@types/fs-extra": "^9.0.12",
-    "@types/node": "^16.7.13",
+    "@types/node": "^20.15.0",
     "@vueuse/core": "^8.1.2",
     "bumpp": "^7.1.1",
     "eslint": "^8.6.1",
     "fs-extra": "^10.0.0",
     "typescript": "^4.6.2",
-    "vite": "^2.8.6",
-    "vue": "^3.2.10",
+    "vite": "^6.3.5",
+    "vite-plugin-vue-server-ref": "^1.0.0",
+    "vue": "^3.5.13",
     "zx": "^4.2.0"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "slidev": ">=0.29.0"
+    "node": ">=18.0.0",
+    "slidev": ">=51.6.0"
   },
   "//": "Learn more: https://sli.dev/themes/write-a-theme.html",
   "slidev": {
