--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "types": [
       "vite/client",
-      "vite-plugin-vue-server-ref/module"
+      "vite-plugin-vue-server-ref",
     ],
   },
   "include": [
