--- a/package.json
+++ b/package.json
@@ -25,14 +25,11 @@
   "peerDependencies": {
     "@slidev/client": "^51.6.0",
     "kalidokit": "^1.1.5",
-    "pixi-live2d-display": "^0.3.1",
+    "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.2.2",
     "vue": "^3.5.13"
   },
   "dependencies": {
-    "kalidokit": "^1.1.5",
-    "pixi-live2d-display": "^0.3.1",
-    "pixi.js": "^6.2.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.18.0",
@@ -46,6 +43,9 @@
     "bumpp": "^7.1.1",
     "eslint": "^8.6.1",
     "fs-extra": "^10.0.0",
+    "kalidokit": "^1.1.5",
+    "pixi-live2d-display": "^0.4.0",
+    "pixi.js": "^6.2.2",
     "typescript": "^4.6.2",
     "vite": "^6.3.5",
     "vite-plugin-vue-server-ref": "^1.0.0",
