--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slidev-theme-viplay",
-  "version": "0.0.4-beta.14",
+  "version": "0.0.4",
   "private": false,
   "description": "Some components for slidev",
   "bugs": "https://github.com/LarchLiu/slidev-theme-viplay/issues",
