--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
     "source.fixAll.eslint": "explicit"
   },
   "files.associations": {
-    "*.css": "postcss",
-  },
+    "*.css": "postcss"
+  }
 }
