--- a/package.json
+++ b/package.json
@@ -3,56 +3,59 @@
   "version": "0.0.4",
   "private": false,
   "description": "Some components for slidev",
+  "author": "alex <larch.liu@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LarchLiu/slidev-theme-viplay.git"
+  },
   "bugs": "https://github.com/LarchLiu/slidev-theme-viplay/issues",
   "keywords": [
     "slidev-theme",
     "slidev",
     "viplay"
   ],
-  "author": "alex <larch.liu@gmail.com>",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LarchLiu/slidev-theme-viplay.git"
+  "engines": {
+    "node": ">=18.0.0",
+    "slidev": ">=51.6.0"
   },
   "scripts": {
     "build": "slidev build example.md",
     "dev": "slidev example.md --open",
+    "lint": "eslint .",
     "export": "slidev export example.md",
     "screenshot": "slidev export example.md --format png",
     "release": "zx scripts/release.mjs",
     "ci:publish": "zx scripts/publish.mjs"
   },
   "peerDependencies": {
+    "@iconify-json/ic": "^1.2.2",
     "@slidev/client": "^51.6.0",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.2.2",
     "vue": "^3.5.13"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@antfu/eslint-config": "^0.18.0",
-    "@antfu/ni": "^0.9.3",
-    "@antfu/utils": "^0.3.0",
-    "@iconify-json/ic": "^1.1.2",
+    "@antfu/eslint-config": "^4.13.0",
+    "@antfu/ni": "^24.3.0",
+    "@antfu/utils": "^9.2.0",
+    "@iconify-json/ic": "^1.2.2",
     "@slidev/cli": "^51.6.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.15.0",
-    "bumpp": "^7.1.1",
-    "eslint": "^8.6.1",
+    "bumpp": "^10.1.0",
+    "eslint": "^9.26.0",
+    "eslint-plugin-format": "^1.0.1",
     "fs-extra": "^11.3.0",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.4.0",
     "pixi.js": "^6.2.2",
+    "prettier-plugin-slidev": "^1.0.5",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
     "vite-plugin-vue-server-ref": "^1.0.0",
     "vue": "^3.5.13",
-    "zx": "^4.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "slidev": ">=51.6.0"
+    "zx": "^8.5.4"
   },
   "//": "Learn more: https://sli.dev/themes/write-a-theme.html",
   "slidev": {
