chore: prettier config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
-  "prettier.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
   "files.associations": {
     "*.css": "postcss"
+  },
+  "prettier.enable": true,
+  // Set the default
+  "editor.formatOnSave": false,
+  // Enable per-language
+  "[markdown]": {
+    "editor.formatOnSave": true
   }
 }
