--- a/.npmignore
+++ b/.npmignore
@@ -9,10 +9,9 @@ components.d.ts
 .github
 .vscode
 .eslintrc
-global-bottom.vue
-global-top.vue
 pnpm-lock.yaml
 vite.config.ts
 example.md
 scripts/
-eslint_config.js
+eslint.config.js
+tsconfig.json
