chore: update dep

--- a/package.json
+++ b/package.json
@@ -26,36 +26,36 @@
     "export": "slidev export example.md",
     "screenshot": "slidev export example.md --format png",
     "release": "bumpp package.json --commit --push --tag",
-    "ci:publish": "pnpm publish --access public --no-git-checks"
+    "ci:publish": "pnpm publish --access public --no-git-checks",
+    "up": "taze major -r",
+    "up:w": "taze major -r -w"
   },
   "peerDependencies": {
     "@iconify-json/ic": "^1.2.2",
     "@slidev/client": "^51.6.0",
-    "kalidokit": "^1.1.5",
-    "pixi-live2d-display": "^0.4.0",
-    "pixi.js": "^6.2.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.0",
-    "@antfu/ni": "^24.3.0",
+    "@antfu/eslint-config": "^4.13.1",
+    "@antfu/ni": "^24.4.0",
     "@antfu/utils": "^9.2.0",
     "@iconify-json/ic": "^1.2.2",
-    "@slidev/cli": "^51.6.0",
+    "@slidev/cli": "^51.6.2",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.15.0",
-    "bumpp": "^10.1.0",
+    "@types/node": "^20.17.47",
+    "bumpp": "^10.1.1",
     "eslint": "^9.26.0",
     "eslint-plugin-format": "^1.0.1",
     "fs-extra": "^11.3.0",
     "kalidokit": "^1.1.5",
     "pixi-live2d-display": "^0.4.0",
-    "pixi.js": "^6.2.2",
+    "pixi.js": "6.5.10",
     "prettier-plugin-slidev": "^1.0.5",
-    "typescript": "^5.7.2",
+    "taze": "^19.1.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-vue-server-ref": "^1.0.0",
-    "vue": "^3.5.13",
+    "vue": "^3.5.14",
     "zx": "^8.5.4"
   },
   "//": "Learn more: https://sli.dev/themes/write-a-theme.html",
